--- a/PhenoPad/CustomControl/AddInControl.xaml
+++ b/PhenoPad/CustomControl/AddInControl.xaml
@@ -9,13 +9,30 @@
     d:DesignHeight="300"
     d:DesignWidth="400">
 
-    <Grid Background="WhiteSmoke">
+    <UserControl.Resources>
+        <x:Double x:Key="categoryButtonHeight">70</x:Double>
+        <x:Double x:Key="categoryButtonFontSize">20</x:Double>
+    </UserControl.Resources>
+    <Grid Background="WhiteSmoke" BorderBrush="LightGray" BorderThickness="2">
         
-        <Grid>
+        <Grid Name="contentGrid">
             <!-- The canvas where we render the replacement text and shapes. -->
             <Canvas x:Name="recognitionCanvas" />
             <!-- The canvas for ink input. -->
             <InkCanvas x:Name="inkCanvas" />
+        </Grid>
+        <Grid Name="categoryGrid" Background="White">
+            <StackPanel Width="200"  HorizontalAlignment="Center" VerticalAlignment="Center">
+                <Button Style="{StaticResource MyButtonStyle}" HorizontalAlignment="Stretch" Height="{StaticResource categoryButtonHeight}">
+                    <TextBlock FontSize="{StaticResource categoryButtonFontSize}" >Drawing</TextBlock>
+                </Button>
+                <Button Style="{StaticResource MyButtonStyle}" HorizontalAlignment="Stretch" Height="{StaticResource categoryButtonHeight}">
+                    <TextBlock FontSize="{StaticResource categoryButtonFontSize}" >Insert a photo</TextBlock>
+                </Button>
+                <Button Style="{StaticResource MyButtonStyle}" HorizontalAlignment="Stretch" Height="{StaticResource categoryButtonHeight}">
+                    <TextBlock FontSize="{StaticResource categoryButtonFontSize}" >Take a photo</TextBlock>
+                </Button>
+            </StackPanel>
         </Grid>
         <StackPanel Height="30" HorizontalAlignment="Right" VerticalAlignment="Top">
             <Button Height="30" Width="30" Padding="0" Name="transformButton" Click="transformButton_Click">
