--- a/PhenoPad/MainPage.xaml
+++ b/PhenoPad/MainPage.xaml
@@ -5,13 +5,13 @@
 // This code is licensed under the MIT License (MIT).
 // THIS CODE IS PROVIDED *AS IS* WITHOUT WARRANTY OF
 // ANY KIND, EITHER EXPRESS OR IMPLIED, INCLUDING ANY
-// IMPLIED WARRANTIES OF FITNESS FOR A PARTICULAR
+// IMPLIED WARRANTIES OF FITNESS FOR A PARTICULAR this.Frame.Navigate(typeof(MainPage));
 // PURPOSE, MERCHANTABILITY, OR NON-INFRINGEMENT.
 //
 //*********************************************************
 -->
 <Page
-      x:Class="PhenoPad.MainPage"
+    x:Class="PhenoPad.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:PhenoPad"
@@ -24,7 +24,9 @@
    
     xmlns:Uc="using:MyScript.IInk.UIReferenceImplementation.UserControls"
     mc:Ignorable="d"
-    Loaded="Page_Loaded">
+    Loaded="Page_Loaded"
+    NavigationCacheMode="Disabled">
+    
     <Page.Resources>
         
     </Page.Resources>
@@ -91,7 +93,7 @@
     -->
 
 
-        <Grid Name="TopMenuRelativePanel" Grid.Row="0" Background="{x:Bind styles:MyColors.TITLE_BAR_WHITE_COLOR_BRUSH}">
+        <Grid Name="TopMenuRelativePanel" Grid.Row="0" Background="{StaticResource TITLE_BAR_WHITE}">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="1050"/>
                 <ColumnDefinition Width="*"/>
@@ -99,19 +101,19 @@
            
             <Grid Grid.Column="0" Grid.ColumnSpan="2">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="100"></ColumnDefinition>
+                    <ColumnDefinition Width="200"></ColumnDefinition>
                     <ColumnDefinition Width="900"></ColumnDefinition>
                     <ColumnDefinition Width="*"></ColumnDefinition>
-                    <ColumnDefinition Width="120"></ColumnDefinition>
+                    <ColumnDefinition Width="200"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
                 <StackPanel Orientation="Horizontal" Grid.Column="0" >
-                    <Button>
+                    <Button Name="BackButton" Click="BackButton_Click" Width="40"  Background="{StaticResource Button_Background}" BorderThickness="0" VerticalAlignment="Stretch">
                         <SymbolIcon Symbol="Back"></SymbolIcon>
                     </Button>
-                    <TextBlock Text="Note name" VerticalAlignment="Center"></TextBlock>
+                    <TextBox BorderThickness="0" Background="{StaticResource TITLE_BAR_WHITE}" FontSize="18" Text="Note name" Margin="5 0 0 0" VerticalAlignment="Center"></TextBox>
                 </StackPanel>
             
-                <CommandBar Grid.Column="1" HorizontalAlignment="Left" Name="topCmdBar" Background="{x:Bind styles:MyColors.TITLE_BAR_WHITE_COLOR_BRUSH}">
+                <CommandBar Grid.Column="1" HorizontalAlignment="Left" Name="topCmdBar" Background="{StaticResource TITLE_BAR_WHITE}">
                     <AppBarButton Icon="Page2" Label="Notes"  Click="NotesButton_Click">
                     <AppBarButton.Flyout>
                             <MenuFlyout>
@@ -124,8 +126,8 @@
                         </MenuFlyout>
                     </AppBarButton.Flyout>
                 </AppBarButton>
-                <AppBarToggleButton Icon="PreviewLink" Label="Overview" Name="sdf" Click="OverviewButton_Click"/>
-                <AppBarToggleButton Icon="Message" Label="Speech" Name="ddd" Click="SpeechButton_Click"/>
+                    <AppBarToggleButton Icon="PreviewLink" Style="{StaticResource MyAppBarToggleButtonStyle}" Label="Overview" Name="sdf" Click="OverviewButton_Click"/>
+                    <AppBarToggleButton Icon="Message" Style="{StaticResource MyAppBarToggleButtonStyle}" Label="Speech" Name="ddd" Click="SpeechButton_Click"/>
                 <AppBarSeparator/>
                
                 <!--
@@ -135,27 +137,30 @@
                     </ToolTipService.ToolTip>
                 </AppBarButton>
                 -->
-            <AppBarButton  Icon="WebCam" Label="Photo/Video"  >
+                    <AppBarToggleButton Name="testButton" Icon="Microphone" Label="Speech Recognition" Click="TestWS_Click">
+                        <ToolTipService.ToolTip>
+                            <TextBlock Text="Enable audio recording"/>
+                        </ToolTipService.ToolTip>
+
+                    </AppBarToggleButton>
+                    <AppBarButton  Icon="WebCam" Label="Photo/Video"  >
                 <AppBarButton.Flyout>
                     <MenuFlyout>
                         <MenuFlyoutItem Text="Insert a photo from files" Click="LoadImage_Click"  Icon="BrowsePhotos"/>
                         <MenuFlyoutItem Text="Take a photo" Click="TakePhoto_Click" Tag="Take a photo" Icon="Camera"/>
-                        <MenuFlyoutItem Text="Record a video" Click="MenuFlyoutItem_Click" Tag="distance" Icon="Video"/>
                          <MenuFlyoutItem Text="Bluetooth" Click="ConnectBluetooth_Click" Icon="Video"/>
                     </MenuFlyout>
                 </AppBarButton.Flyout>
+                        
 
-                <ToolTipService.ToolTip>
+                   <ToolTipService.ToolTip>
                     <TextBlock Text="Enable video recording"/>
                 </ToolTipService.ToolTip>
             </AppBarButton>
-            <AppBarToggleButton Name="testButton" Icon="Microphone" Label="Speech Recognition" Click="TestWS_Click">
-                <ToolTipService.ToolTip>
-                    <TextBlock Text="Enable audio recording"/>
-                </ToolTipService.ToolTip>
-
-            </AppBarToggleButton>
+                    <AppBarToggleButton Style="{StaticResource MyAppBarToggleButtonStyle}" Icon="Video" Label="Video" Name="StreamButton" Click="StreamButton_Click"></AppBarToggleButton>
+           <!--
             <AppBarButton Name="MyScriptButton" Label="MyScript" Click="MyScriptButton_Click"></AppBarButton>
+                    -->
             <!--
                 <AppBarToggleButton Name="" Foreground="LightBlue" Icon="Microphone" Label="Speech Recognition" Click="MicButton_Click">
                     <ToolTipService.ToolTip>
@@ -201,8 +206,8 @@
                     </Style>
                     -->
                     </InkToolbar.Resources>
-                    <InkToolbarBallpointPenButton Name="BallpointPenButton" SelectedStrokeWidth="2" Background="{x:Bind styles:MyColors.TITLE_BAR_WHITE_COLOR_BRUSH}"></InkToolbarBallpointPenButton>
-                    <InkToolbarEraserButton  Name="EraserButton" Background="{x:Bind styles:MyColors.TITLE_BAR_WHITE_COLOR_BRUSH}"></InkToolbarEraserButton>
+                    <InkToolbarBallpointPenButton Name="BallpointPenButton" SelectedStrokeWidth="2" Background="{StaticResource TITLE_BAR_WHITE}"></InkToolbarBallpointPenButton>
+                    <InkToolbarEraserButton  Name="EraserButton" Background="{StaticResource TITLE_BAR_WHITE}"></InkToolbarEraserButton>
 
 
                 <!--
@@ -222,17 +227,22 @@
                         <InkToolbarPenConfigurationControl/>
                     </InkToolbarCustomPenButton.ConfigurationContent>
                 </InkToolbarCustomPenButton>-->
-                    <InkToolbarCustomToggleButton x:Name="toolButtonLasso"  Click="ToolButton_Lasso" Background="{x:Bind styles:MyColors.TITLE_BAR_WHITE_COLOR_BRUSH}" ToolTipService.ToolTip="Selection tool">
+                    <InkToolbarCustomToggleButton x:Name="toolButtonLasso"  Click="ToolButton_Lasso" Background="{StaticResource TITLE_BAR_WHITE}" ToolTipService.ToolTip="Selection tool">
                     <SymbolIcon Symbol="{x:Bind LassoSelect}"/>
                 </InkToolbarCustomToggleButton>
-                    <InkToolbarCustomToggleButton x:Name="toggleButton" Click="Toggle_Custom"  Background="{x:Bind styles:MyColors.TITLE_BAR_WHITE_COLOR_BRUSH}" ToolTipService.ToolTip="Touch Writing">
+                    <InkToolbarCustomToggleButton x:Name="toggleButton" Click="Toggle_Custom"  Background="{StaticResource TITLE_BAR_WHITE}" ToolTipService.ToolTip="Touch Writing">
                     <SymbolIcon Symbol="{x:Bind TouchWriting}"/>
                 </InkToolbarCustomToggleButton>
             </InkToolbar>
 
 
-                <CommandBar Grid.Column="3" Background="{x:Bind styles:MyColors.TITLE_BAR_WHITE_COLOR_BRUSH}">
-                    <AppBarButton Name="FullscreenBtn" Icon="FullScreen" Label="Fullscreen Mode" Click="FullscreenButton_Click">
+                <CommandBar Grid.Column="3" Background="{StaticResource TITLE_BAR_WHITE}">
+                    <AppBarButton  Name="SaveButton" Icon="Save" Label="Save notes" Click="SaveButton_Click">
+                        <ToolTipService.ToolTip>
+                            <TextBlock Text="Enter full screen mode."/>
+                        </ToolTipService.ToolTip>
+                    </AppBarButton>
+                    <AppBarButton  Name="FullscreenBtn" Icon="FullScreen" Label="Fullscreen Mode" Click="FullscreenButton_Click">
                         <ToolTipService.ToolTip>
                             <TextBlock Text="Enter full screen mode."/>
                         </ToolTipService.ToolTip>
@@ -277,10 +287,10 @@
                     
                     <Grid Name="QuickView1" Background="White" BorderBrush="#EEEEEE" BorderThickness="0" Grid.Row="0" Grid.Column="1">
                         <Grid.RowDefinitions>
-                            <RowDefinition Height="25"/>
+                            <RowDefinition Height="30"/>
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
-                        <TextBlock Grid.Row="0" Margin="10 0 0 0" Foreground="{x:Bind styles:MyColors.PHENOTYPE_BLUE}">Collected phenotypes:</TextBlock>
+                        <TextBlock Grid.Row="0" Margin="2 0 0 0" Padding="0 3 0 3" FontSize="15" Foreground="{StaticResource WORD_DARK}">Collected phenotypes:</TextBlock>
                         <ListView x:Name="savedPhenoListView" Grid.Row="1" ItemsSource="{x:Bind PhenoMana.savedPhenotypes, Mode=OneWay}">
                             <ListView.ItemTemplate>
                                 <DataTemplate x:DataType="phenotypeservice:Phenotype">
@@ -302,10 +312,10 @@
 
                     <Grid Name="QuickView2" Background="White" BorderBrush="#EEEEEE" BorderThickness="0"  Grid.Row="1" Grid.Column="1">
                         <Grid.RowDefinitions>
-                            <RowDefinition Height="20"/>
+                            <RowDefinition Height="30"/>
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
-                        <TextBlock Grid.Row="0"  Margin="10 0 0 0" Foreground="{x:Bind styles:MyColors.PHENOTYPE_BLUE}">You may also want to investigate:</TextBlock>
+                        <TextBlock Grid.Row="0"  Margin="2 0 0 0" Padding="0 3 0 3"  Foreground="{StaticResource WORD_DARK}">You may also want to investigate:</TextBlock>
                         <ListView x:Name="suggestedPhenoListView" Grid.Row="1" ItemsSource="{x:Bind PhenoMana.suggestedPhenotypes, Mode=OneWay}">
                             <ListView.ItemTemplate>
                                 <DataTemplate x:DataType="phenotypeservice:Phenotype">
@@ -326,14 +336,14 @@
 
                     <Grid Name="QuickView3" Background="White" BorderBrush="#EEEEEE" BorderThickness="0" Grid.Row="2" Grid.Column="1">
                         <Grid.RowDefinitions>
-                            <RowDefinition Height="20"/>
+                            <RowDefinition Height="30"/>
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
-                        <TextBlock Grid.Row="0"  Margin="10 0 0 0" Foreground="{x:Bind styles:MyColors.PHENOTYPE_BLUE}">Differential diagnosis:</TextBlock>
+                        <TextBlock Grid.Row="0"  Margin="2 0 0 0" Padding="0 3 0 3"  Foreground="{StaticResource WORD_DARK}">Differential diagnosis:</TextBlock>
                         <ListView x:Name="diseaseListView" Grid.Row="1" ItemsSource="{x:Bind PhenoMana.predictedDiseases}">
                             <ListView.ItemTemplate>
                                 <DataTemplate x:DataType="phenotypeservice:Disease">
-                                    <TextBlock Text="{x:Bind name}" FontSize="10"></TextBlock>
+                                    <TextBlock Text="{x:Bind name}" FontSize="13"></TextBlock>
                                 </DataTemplate>
                             </ListView.ItemTemplate>
                             <ListView.ItemContainerStyle>
@@ -422,27 +432,28 @@
             <Grid Background="WhiteSmoke" Name="CameraCanvas" Height="300" Width="530" RelativePanel.Above="pageIndexTextBlock" RelativePanel.AlignRightWithPanel="True" Visibility="Collapsed">
                 <photovideoservice:PhotoVideoCaptureControl x:Name="captureControl"></photovideoservice:PhotoVideoCaptureControl>
              
-                <StackPanel Height="30" VerticalAlignment="Top" >
-                    <Button  Height="30" Width="40" Click="CameraClose_Click">
+                <StackPanel Height="30" VerticalAlignment="Top" Background="WhiteSmoke" Orientation="Horizontal">
+                    <Button  Height="30" Width="40" Click="CameraClose_Click" Background="WhiteSmoke" Foreground="Gray">
                         <SymbolIcon Symbol="Clear" ></SymbolIcon>
                     </Button>
+                    <TextBlock VerticalAlignment="Center" FontSize="16" Margin="20 0 0 0" Text="Camera"/>
                 </StackPanel>
-                <StackPanel Height="30" VerticalAlignment="Top" HorizontalAlignment="Right" Orientation="Horizontal">
+                <StackPanel Height="30" VerticalAlignment="Top" HorizontalAlignment="Right" Orientation="Horizontal" >
 
-                    <Button Height="30" Width="40" Name="VideoButton" Click="VideoButton_Click" IsEnabled="False">
+                    <Button Height="30" Width="40" Name="VideoButton" Click="VideoButton_Click" IsEnabled="False" Background="WhiteSmoke">
                         <Grid>
                             <Ellipse x:Name="StartRecordingIcon" Fill="Red" Width="10" Height="10"/>
                             <Rectangle x:Name="StopRecordingIcon" Fill="White" Width="20" Height="20" Visibility="Collapsed"/>
                         </Grid>
                     </Button>
-                    <Button Height="30" Width="40" Name="PhotoButton" Click="PhotoButton_Click" Foreground="White">
+                    <Button Height="30" Width="40" Name="PhotoButton" Click="PhotoButton_Click" Foreground="Black" Background="WhiteSmoke">
                         <SymbolIcon Symbol="Camera" />
                     </Button>
                 </StackPanel>
             </Grid>
-<!--
-            <WebView Height="640" Width="800" Source="http://192.168.137.8/html/" RelativePanel.Above="showTextGrid" RelativePanel.AlignRightWithPanel="True"></WebView>
-    -->
+
+            <WebView Name="StreamView" Height="500" Visibility="Collapsed" Width="800" Source="http://192.168.137.8/html/" RelativePanel.Above="showTextGrid" RelativePanel.AlignRightWithPanel="True"></WebView>
+    
             
             <Grid Height="40" Width="90" Padding="0 0 0 0" Background="WhiteSmoke" Name="showTextGrid" RelativePanel.AlignBottomWithPanel="True" RelativePanel.AlignRightWithPanel="True">
                 <Image  Visibility="Collapsed" Name="printImage" Width="70" Source="Assets/abc_print.png" VerticalAlignment="Center" HorizontalAlignment="Center" Opacity="0.3"/>
@@ -453,9 +464,9 @@
             <TextBlock x:Name="modeTextBlock" Margin="0 0 10 0" RelativePanel.AlignTopWithPanel="True" RelativePanel.AlignRightWithPanel="True" Padding=" 0 0 10 0" FontSize="25" FontFamily="Segoe UI" FontWeight="ExtraBold" Foreground="LightGray" Opacity="0.5">Handwriting Mode</TextBlock>
 
 
-            <StackPanel  Name="pageIndexPanel"  Margin="0 0 0 63" Orientation="Horizontal" RelativePanel.AlignBottomWithPanel="True" RelativePanel.AlignHorizontalCenterWithPanel="True" Padding="0 5 22 0">
+            <StackPanel  Name="pageIndexPanel"  Margin="0 0 0 40" Orientation="Horizontal" RelativePanel.AlignBottomWithPanel="True" RelativePanel.AlignHorizontalCenterWithPanel="True" Padding="0 5 22 0">
                 <Button Height="30" Width="30" Padding="0 0 0 0" Background="WhiteSmoke"  Click="AddPageButton_Click">
-                    <SymbolIcon Symbol="Add" Foreground="LightBlue" />
+                    <SymbolIcon Symbol="Add" Foreground="{StaticResource Button_Background}" />
                 </Button>
             </StackPanel>
             <TextBlock Name="cmdBarTextBlock" Margin="12,14" RelativePanel.AlignLeftWithPanel="True" RelativePanel.Above="showTextGrid"
